--- a/Realidada-VR.html
+++ b/Realidada-VR.html
@@ -70,8 +70,8 @@
     <div class="row justify-content-center">
       <div class="col-lg-8">
           <div class="page-title text-center">
-             <p>Sistema de Control de Entradas y Salidas </p>
-              <h1>Victor SICES</h1>
+             <p>Realidad Virtual </p>
+              <h1>VR Anatomia</h1>
           </div>
       </div>
     </div>
@@ -83,37 +83,30 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8">
-                <img src="images/portfolio/busqueda.png" alt="" class="img-fluid rounded">
+                <img src="images/portfolio/foto.jpg" alt="" class="img-fluid rounded">
 
-                <p class="mt-4 mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, omnis voluptatum iure expedita sequi obcaecati iste dolores debitis numquam, reprehenderit eum consequuntur cum, quam nesciunt esse tenetur architecto molestiae adipisci.</p>
+                <p class="mt-4 mb-5">Un entorno virtual de aprendizaje es lo que hace tiempo está desarrollando la universidad de Standford usando la Realidad Virtual (RV) del cuerpo humano, esto ha permitido a sus estudiantes el estudio del cuerpo humano obteniendo respuestas a diferentes estímulos, logrando que practicarán varias veces con esos modelos virtuales antes de entrar al quirófano. </p>
 
                 <div class="row">
                     <div class="col-lg-6 mb-4">
-                        <h4 class="mb-3"> <i class="ti-search mr-3"></i>Research</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus fugit vel itaque quidem voluptatibus cum vero modi nulla sit, molestiae?</p>
+                        <h4 class="mb-3"> <i class="ti-search mr-3"></i>Diseño</h4>
+                        <p>Modelado: La creación de los volúmenes de los objetos, esculpiendo los diferentes elementos de nuestra composición, hasta lograr el resultado deseado referenciado tanto imágenes u archivos de otros programas, por lo general archivos con extensión dwg.</p>
                     </div>
                     <div class="col-lg-6 mb-4">
-                        <h4 class="mb-3"> <i class="ti-layers mr-3"></i>Wireframing</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus fugit vel itaque quidem voluptatibus cum vero modi nulla sit, molestiae?</p>
+                        <h4 class="mb-3"> <i class="ti-layers mr-3"></i>Desarrollo</h4>
+                        <p>“Unity 3D, es un motor gráfico 3D para PC y Mac que se usa para desarrollar juegos, aplicaciones interactivas, visualizaciones y animaciones en 3D.</p>
                     </div>
-                     <div class="col-lg-6 mb-4 mb-lg-0">
-                        <h4 class="mb-3"><i class="ti-layout mr-3"></i>Design</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus fugit vel itaque quidem voluptatibus cum vero modi nulla sit, molestiae?</p>
-                    </div>
-                     <div class="col-lg-6 ">
-                        <h4 class="mb-3"><i class="ti-desktop mr-3"></i>Development</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus fugit vel itaque quidem voluptatibus cum vero modi nulla sit, molestiae?</p>
-                    </div>
+                    
                 </div>
 
 
                 <div class="row mt-5">
                     <div class="col-lg-6">
-                        <img src="images/portfolio/reportes.png" alt="" class="img-fluid">
+                        <img src="images/portfolio/esqueleto.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="col-lg-6">
-                        <h4 class="mt-5 mb-3"><i class="ti-rocket mr-3"></i>Final Delivery</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia enim nihil accusamus error perspiciatis nam quas distinctio nobis, quibusdam mollitia totam ipsam obcaecati, iusto alias reprehenderit tempora placeat voluptates eligendi.</p>
+                        <h4 class="mt-5 mb-3"><i class="ti-rocket mr-3"></i>Desarrollo</h4>
+                        <p>Unity es accesible a cualquier tipo de público, pues está desarrollado en varias versiones, gratuita y profesional, ambas poseen grandes ventajas al momento de desarrollar lo que se requiera, no obstante, la versión más completa es la profesional, pero hay que aclarar que esta versión tiene un costo que no todo el mundo puede pagar y si a eso le añadimos, que se trata de alguien que apenas está familiarizándose con la herramienta con la versión gratuita por el momento es más que suficiente</p>
                     </div>
                 </div>
             </div>
@@ -121,12 +114,12 @@
             <div class="col-lg-4">
                 <div class="portfolio-sidebar mt-5 mt-lg-0">
                     <div class="card bg-gray p-4">
-                        <h4 class="card-title text-center mb-5 pt-4">Course Project | Proyecto de Curso</h4>
+                        <h4 class="card-title text-center mb-5 pt-4">Proyecto de Feria</h4>
 
                         <ul class="list-unstyled">
                             <li class="d-flex justify-content-between align-content-center">
                                 Creado:
-                                <span>15 Marzo 2019</span>
+                                <span>25 abril 2019</span>
                             </li>
                             <li class="d-flex justify-content-between align-content-center">
                                 Costo:
@@ -139,7 +132,7 @@
                             </li>
                             <li class="d-flex justify-content-between align-content-center">
                                 Cliente:
-                                <span>Anonimo</span>
+                                <span></span>
                             </li>
                             <li class="d-flex justify-content-between align-content-center">
                                 Duracion:
@@ -147,16 +140,13 @@
                             </li>
                             <li class="d-flex justify-content-between align-content-center">
                                 Framework:
-                                <span>Netbeans 7.2</span>
+                                <span>Unity 3D</span>
                             </li>
                             <li class="d-flex justify-content-between align-content-center">
                                 Plataforma:
-                                <span>Windows</span>
+                                <span>Android</span>
                             </li>
-                            <li class="d-flex justify-content-between align-content-center">
-                                browser compatiable:
-                                <span>Si</span>
-                            </li>
+                            
                             <li class="d-flex justify-content-between align-content-center">
                                 Documentacion:
                                 <span>Incluida</span>
@@ -169,8 +159,8 @@
                     </div>
 
                     <div class="card bg-gray p-5 mt-4">
-                        <h3 class="text-center mb-4">Have any project on mind?</h3>
-                         <a href="#" class="btn btn-solid-border">Contact me</a>
+                        <h3 class="text-center mb-4">¿Tienes algún proyecto en mente?</h3>
+                         <a href="#" class="btn btn-solid-border">Contactame</a>
                     </div>
                 </div>
             </div>
