--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
 
 		<div class="row justify-content-center">
 			<div class="col-lg-8">
-					<form class="contact__form form-row contact-form" method="post" action="#" id="contactForm" action="enviar.php">
+					<form class="contact__form form-row contact-form" method="post" id="contactForm" action="enviar.php">
 							 <div class="row">
 		                        <div class="col-12">
 		                            <div class="c" style="display: none" role="alert">
