--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			  </li>
 			   <li class="nav-item"><a class="nav-link smoth-scroll" href="#about">About</a></li>
 			   <li class="nav-item"><a class="nav-link smoth-scroll" href="#skillbar">Expertise</a></li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="#service">Services</a></li>
+			   <li class="nav-item"><a class="nav-link smoth-scroll" href="#service">Servicios</a></li>
 			   <li class="nav-item"><a class="nav-link smoth-scroll" href="#portfolio">portfolio</a></li>
 			   <li class="nav-item"><a class="nav-link smoth-scroll" href="#blog">Blog</a></li>
 			   <li class="nav-item"><a class="nav-link smoth-scroll" href="#contact">Contact</a></li>
