--- a/Realidada-VR.html
+++ b/Realidada-VR.html
@@ -6,7 +6,7 @@
   
   <meta name="author" content="themeturn.com">
 
-  <title>Ratsaan| Creative portfolio template</title>
+  <title>VR Anatomia</title>
 
   <!-- Mobile Specific Meta-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,7 +35,7 @@
 
 <nav class="navbar navbar-expand-lg bg-transprent py-4 fixed-top navigation" id="navbar">
 	<div class="container">
-	  <a class="navbar-brand" href="index-2.html">
+	  <a class="navbar-brand" href="index.html">
 	  	<h2 class="logo">Programador.</h2>
 	  </a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,12 +47,12 @@
 			  <li class="nav-item active">
 				<a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
 			  </li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#about">About</a></li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#skillbar">Expertise</a></li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#service">Services</a></li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#portfolio">portfolio</a></li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#blog">Blog</a></li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#contact">Contact</a></li>
+			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#about">About</a></li>
+			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#skillbar">Expertise</a></li>
+			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#service">Services</a></li>
+			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#portfolio">portfolio</a></li>
+			   <!--<li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#blog">Blog</a></li>-->
+			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#contact">Contact</a></li>
 			</ul>
 
 		  	<ul class="list-inline mb-0 ml-lg-4 nav-social">
