--- a/web.html
+++ b/web.html
@@ -332,7 +332,7 @@
 						<img src="images/portfolio/2.jpg" alt="" class="img-fluid">
 
 						<div class="portoflio-item-overlay">
-							<a href="web.html"><i class="ti-plus"></i></a>
+							<a href="portfolio-single.html"><i class="ti-plus"></i></a>
 						</div>
 					</div>
 					<div class="text mt-3">
