--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -35,7 +35,7 @@
 
 <nav class="navbar navbar-expand-lg bg-transprent py-4 fixed-top navigation" id="navbar">
 	<div class="container">
-	  <a class="navbar-brand" href="index-2.html">
+	  <a class="navbar-brand" href="index.html">
 	  	<h2 class="logo">Programador.</h2>
 	  </a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,11 +47,11 @@
 			  <li class="nav-item active">
 				<a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
 			  </li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#about">About</a></li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#skillbar">Expertise</a></li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#service">Services</a></li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#portfolio">portfolio</a></li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#blog">Blog</a></li>
+			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#about">About</a></li>
+			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#skillbar">Expertise</a></li>
+			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#service">Services</a></li>
+			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#portfolio">portfolio</a></li>
+			   <!--<li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#blog">Blog</a></li>-->
 			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#contact">Contact</a></li>
 			</ul>
 
