--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 						<h2><i class="ti-minus"></i>Perfil</h2>
 					</div>
 					<div class="col-lg-8">
-						<p class="text-white-50 text-md">¡Hola! Soy<span class="text-white"> Victor Lopez</span> un <span class="text-white">Diseñador y Programador </span> autodidacata <span class="text-white"></span> con muy alto deseo de superacion personal</p>
+						<p class="text-white-50 text-md">¡Hola! Soy<span class="text-white"> Victor Lopez</span> un <span class="text-white">Diseñador y Programador </span> autodidacta <span class="text-white"></span> con muy alto deseo de superacion personal</p>
 						<p class="text-white-50 text-md"> Trabajo arduamente en la programacion. Trabajo para ofrecer las mejores <span class="text-white">soluciones posibles</span> conforme a sus necesidades.</p>
 					</div>
 
@@ -495,7 +495,7 @@ Blog End -->
 
 		<div class="row justify-content-center">
 			<div class="col-lg-8">
-					<form class="contact__form form-row contact-form" method="post" id="contactForm" action="enviar.php">
+					<form action="enviar.php" class="contact__form form-row contact-form" method="post" >
 							 <div class="row">
 		                        <div class="col-12">
 		                            <div class="c" style="display: none" role="alert">
