--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 						</div>
 					</div>
 					<div class="text mt-3">
-						<h4 class="mb-1 text-capitalize">VR Anatomio</h4>
+						<h4 class="mb-1 text-capitalize">VR Anatomia</h4>
 						<p class="text-uppercase letter-spacing text-sm">Android</p>
 					</div>
 				</div>
