--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 </section>
 Blog End -->
 
-<!-- Contact start -->
+<!-- Contact start 
 <section class="section" id="contact" data-aos="fade-up">
 	<div class="container">
 		<div class="row justify-content-center">
@@ -525,7 +525,7 @@ Blog End -->
 		</div>
 	</div>
 </section>
-<!-- Contact End -->
+Contact End -->
 
 <!-- Footer start -->
 <footer class="footer border-top-1">
