--- a/index.html
+++ b/index.html
@@ -544,12 +544,12 @@ Contact End -->
 					<li class="list-inline-item"><a href="#"><i class="ti-dribbble"></i></a></li>
 				</ul>
 			</div>
-			<!--
+			<!-- fooeter start -->
 			<div class="col-lg-5">
-				<p class="lead"><span class="text-color"><a href="https://www.templatespoint.net" target="_blank">Templates Point</a></p>
+				<p class="lead"><span class="text-color"><a href="castillolopez735@gmail.com" target="_blank">Contactanos atraves de:</a></p>
 				<a href="#top" class="backtop smoth-scroll"><i class="ti-angle-up"></i></a>
 			</div>
-			-->
+			
 		</div>
 	</div>
 </footer>
