--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@ Contact End -->
 			</div>
 			<!-- fooeter start -->
 			<div class="col-lg-5">
-				<p class="lead"><span class="text-color"><a href="castillolopez735@gmail.com" target="_blank">Contactanos atraves de:</a></p>
+				<p class="lead"><span class="text-color"><a href="" target="_blank">Contactanos atraves de: castillolopez735@gmail.com</a></p>
 				<a href="#top" class="backtop smoth-scroll"><i class="ti-angle-up"></i></a>
 			</div>
 			
