--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@ Blog End -->
 Contact End -->
 
 <!-- Footer start -->
-<footer class="footer border-top-1">
+<footer class="footer border-top-1", id= "contact">
 	<div class="container">
 		<div class="row align-items-center text-center text-lg-left">
 			<div class="col-lg-2">
