--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -55,11 +55,11 @@
 			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#contact">Contact</a></li>
 			</ul>
 
-		  	<ul class="list-inline mb-0 ml-lg-4 nav-social">
-			  	<li class="list-inline-item"><a href="#"><i class="ti-facebook"></i></a></li>
-			  	<li class="list-inline-item"><a href="#"><i class="ti-twitter"></i></a></li>
-			  	<li class="list-inline-item"><a href="#"><i class="ti-pinterest"></i></a></li>
-		  	</ul>
+            <ul class="list-inline mb-0 ml-lg-4 nav-social">
+                <li class="list-inline-item"><a href="https://www.facebook.com/profile.php?id=100006933391613"><i class="ti-facebook"></i></a></li>
+                <li class="list-inline-item"><a href="https://twitter.com/victor_lopz21"><i class="ti-twitter"></i></a></li>
+                <li class="list-inline-item"><a href="https://github.com/victorLopz"><i class="ti-github"></i></a></li>
+            </ul>
 	  </div>
 	</div>
 </nav>
@@ -85,35 +85,13 @@
             <div class="col-lg-8">
                 <img src="images/portfolio/busqueda.png" alt="" class="img-fluid rounded">
 
-                <p class="mt-4 mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, omnis voluptatum iure expedita sequi obcaecati iste dolores debitis numquam, reprehenderit eum consequuntur cum, quam nesciunt esse tenetur architecto molestiae adipisci.</p>
-
-                <div class="row">
-                    <div class="col-lg-6 mb-4">
-                        <h4 class="mb-3"> <i class="ti-search mr-3"></i>Research</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus fugit vel itaque quidem voluptatibus cum vero modi nulla sit, molestiae?</p>
-                    </div>
-                    <div class="col-lg-6 mb-4">
-                        <h4 class="mb-3"> <i class="ti-layers mr-3"></i>Wireframing</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus fugit vel itaque quidem voluptatibus cum vero modi nulla sit, molestiae?</p>
-                    </div>
-                     <div class="col-lg-6 mb-4 mb-lg-0">
-                        <h4 class="mb-3"><i class="ti-layout mr-3"></i>Design</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus fugit vel itaque quidem voluptatibus cum vero modi nulla sit, molestiae?</p>
-                    </div>
-                     <div class="col-lg-6 ">
-                        <h4 class="mb-3"><i class="ti-desktop mr-3"></i>Development</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus fugit vel itaque quidem voluptatibus cum vero modi nulla sit, molestiae?</p>
-                    </div>
-                </div>
-
-
                 <div class="row mt-5">
                     <div class="col-lg-6">
                         <img src="images/portfolio/reportes.png" alt="" class="img-fluid">
                     </div>
                     <div class="col-lg-6">
                         <h4 class="mt-5 mb-3"><i class="ti-rocket mr-3"></i>Final Delivery</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia enim nihil accusamus error perspiciatis nam quas distinctio nobis, quibusdam mollitia totam ipsam obcaecati, iusto alias reprehenderit tempora placeat voluptates eligendi.</p>
+                        <p>Projecto de Sistemas de inventarios</p>
                     </div>
                 </div>
             </div>
@@ -178,29 +156,78 @@
     </div>
 </section>
 
-<footer class="footer border-top-1">
+footer class="footer border-top-1", id= "contact">
 	<div class="container">
 		<div class="row align-items-center text-center text-lg-left">
 			<div class="col-lg-2">
-				<h2 class="logo mb-4">Victor Lopez.</h2>
+				<h2 class="logo mb-4">Victor Lopez</h2>
 			</div>
 
 			<div class="col-lg-5">
 				<ul class="list-inline footer-socials ">
-					<li class="list-inline-item"><a href="#"><i class="ti-facebook"></i></a></li>
-					<li class="list-inline-item"><a href="#"><i class="ti-twitter"></i></a></li>
-					<li class="list-inline-item"><a href="#"><i class="ti-pinterest"></i></a></li>
-					<li class="list-inline-item"><a href="#"><i class="ti-linkedin"></i></a></li>
-					<li class="list-inline-item"><a href="#"><i class="ti-dribbble"></i></a></li>
+					<li class="list-inline-item"><a href="https://www.facebook.com/profile.php?id=100006933391613"><i class="ti-facebook"></i></a></li>
+					<li class="list-inline-item"><a href="https://github.com/victorLopz"><i class="ti-github"></i></a></li>
+					<li class="list-inline-item"><a href="https://twitter.com/victor_lopz21"><i class="ti-twitter"></i></a></li>
+					<li class="list-inline-item"><a data-toggle="modal" data-target="#whatsapp"><i class="ti-email"></i></a></li>
 				</ul>
 			</div>
+			<!-- fooeter start -->
 			<div class="col-lg-5">
-				<p class="lead"><span class="text-color"></p>
+				<p class="lead"><span class="text-color"><a href="mailto:castillolopez735@gmail.com?Subject=Interesado%20en%20su%20Trabajo" target="_blank">Contactanos atraves de: castillolopez735@gmail.com</a></p>
 				<a href="#top" class="backtop smoth-scroll"><i class="ti-angle-up"></i></a>
 			</div>
+			
 		</div>
 	</div>
 </footer>
+<!-- Footer End -->
+
+<style>
+
+/* bootstrap.min.css | file:///C:/Users/casti/Documents/VictorWeb/VictorWeb/plugins/bootstrap/css/bootstrap.min.css */
+
+.modal-content {
+  /* background-color: #fff; */
+  background-color: #054640;
+}
+
+</style>
+
+
+<!-- Modal -->
+<div class="modal fade" id="whatsapp" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+	<div class="modal-dialog modal-dialog-centered" role="document">
+	  <div class="modal-content">
+		<div class="modal-header">
+		  <center><h5 class="modal-title" id="exampleModalLongTitle">Envianos tu Whatsapp</h5></center>
+		  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+			<span aria-hidden="true">&times;</span>
+		  </button>
+		</div>
+		<div class="modal-body">
+
+			<form id="formulario" class="formulario">
+
+				<div class="form-group">
+					<label for="formGroupExampleInput">Escriba su Nombre y Apellido</label>
+					<input type="text" class="form-control" id="nombre" placeholder="Nombre y Apellidos">
+				  </div>
+				  <div class="form-group">
+					<label for="formGroupExampleInput2">Su Projecto es ?</label>
+					<input type="text" class="form-control" id="apellidos" placeholder="Trabajemos Juntos">
+				  </div>
+				  <div class="form-group">
+					<label for="formGroupExampleInput2">Escriba su Correo Electrónico</label>
+					<input type="email" class="form-control" id="email" placeholder="example@gmail.com">
+				  </div>
+				  <center><button id="submit" type="submit" class="btn btn-success">Enviar WhatsApp</button></center>
+				
+			</form>
+
+		</div>
+	  </div>
+	</div>
+  </div>
 
     <!-- 
     Essential Scripts
@@ -228,4 +255,45 @@
     <script src="js/ajax-contact.html"></script>
 
   </body>
+
+<script>
+	function isMobile() {
+		if (sessionStorage.desktop)
+			return false;
+		else if (localStorage.mobile)
+			return true;
+		var mobile = ['iphone', 'ipad', 'android', 'blackberry', 'nokia', 'opera mini', 'windows mobile', 'windows phone', 'iemobile'];
+		for (var i in mobile)
+			if (navigator.userAgent.toLowerCase().indexOf(mobile[i].toLowerCase()) > 0) return true;
+		return false;
+	}
+
+const formulario = document.querySelector('#formulario');
+const buttonSubmit = document.querySelector('#submit');
+const urlDesktop = 'https://web.whatsapp.com/';
+const urlMobile = 'whatsapp://';
+const telefono = '+50589823811';
+
+formulario.addEventListener('submit', (event) => {
+    event.preventDefault()
+    buttonSubmit.innerHTML = '<i class="fas fa-circle-notch fa-spin"></i>'
+    buttonSubmit.disabled = true
+    setTimeout(() => {
+        let nombre = document.querySelector('#nombre').value
+        let apellidos = document.querySelector('#apellidos').value
+        let email = document.querySelector('#email').value
+        let mensaje = 'send?phone=' + telefono + '&text=Hola, Pronto Hablaremos ¿Su nombre es?*%0A' + nombre + '%0A*¿Su projecto es?*%0A' + apellidos + '%0A*¿Su Email es?*%0A' + email + ''
+        if(isMobile()) {
+            window.open(urlMobile + mensaje, '_blank')
+        }else{
+            window.open(urlDesktop + mensaje, '_blank')
+        }
+        buttonSubmit.innerHTML = '<i class="fab fa-whatsapp"></i> Enviar WhatsApp'
+        buttonSubmit.disabled = false
+    }, 3000);
+});
+
+</script>
+  
 </html>
+   
