--- a/index.html
+++ b/index.html
@@ -232,14 +232,14 @@
 				<div class="card p-5 rounded-0">
 					<i class="ti-layers text-lg-2 text-muted"></i>
 					<h3 class="my-4 text-capitalize">Diseño gráfico</h3>
-					<p>Como Diseñador tenemos varias herramientas que nos facilitan el alcanze de diagramas y logotipos de modelados 3D</p>
+					<p>Como Diseñador tenemos varias herramientas que nos facilitan el alcance de diagramas y logotipos de modelados 3D</p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-6">
 				<div class="card p-5 rounded-0">
 					<i class="ti-layout text-lg-2 text-muted"></i>
 					<h3 class="my-4 text-capitalize">Front End Desing</h3>
-					<p>El diseño con el Front End es muy importante ya que es la vista del usuario, donde se refleja la informacion del Cliente
+					<p>El diseño con el Front End es muy importante ya que es la vista del usuario, donde se refleja la información del Cliente
 					</p>
 				</div>
 			</div>
@@ -247,7 +247,7 @@
 				<div class="card  p-5 rounded-0">
 					<i class="ti-desktop text-lg-2 text-muted"></i>
 					<h3 class="my-4 text-capitalize">Back End</h3>
-					<p>Nos Garantizamos de usar las mejoes herramientas para trabajar un Back limpio y MVC donde podamos optimizar el rendimiento del software</p>
+					<p>Nos Garantizamos de usar las mejores herramientas para trabajar un Back limpio y MVC donde podamos optimizar el rendimiento del software</p>
 				</div>
 			</div>
 		</div>
