--- a/blog-single.html
+++ b/blog-single.html
@@ -45,14 +45,13 @@
 	  <div class="collapse navbar-collapse text-center" id="navbarsExample09">
 			<ul class="navbar-nav mx-auto">
 			  <li class="nav-item active">
-				<a class="nav-link" href="index-2.html">Home <span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 			  </li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#about">About</a></li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#skillbar">Expertise</a></li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#service">Services</a></li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#portfolio">portfolio</a></li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#blog">Blog</a></li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#contact">Contact</a></li>
+			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#about">About</a></li>
+			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#skillbar">Expertise</a></li>
+			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#service">Service</a></li>
+			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#portfolio">Briefcase</a></li>
+			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#contact">Contact</a></li>
 			</ul>
 
 		  	<ul class="list-inline mb-0 ml-lg-4 nav-social">
