--- a/oculus.html
+++ b/oculus.html
@@ -47,12 +47,11 @@
 			  <li class="nav-item active">
 				<a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
 			  </li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#about">About</a></li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#skillbar">Expertise</a></li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#service">Services</a></li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#portfolio">portfolio</a></li>
-			   <!--<li class="nav-item"><a class="nav-link smoth-scroll" href="index-2.html#blog">Blog</a></li>-->
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#contact">Contact</a></li>
+              <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#about">About</a></li>
+              <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#skillbar">Expertise</a></li>
+              <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#service">Service</a></li>
+              <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#portfolio">Briefcase</a></li>
+              <li class="nav-item"><a class="nav-link smoth-scroll" href="index.html#contact">Contact</a></li>
             </ul>
             
             <ul class="list-inline mb-0 ml-lg-4 nav-social">
