--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 			  </li>
 			   <li class="nav-item"><a class="nav-link smoth-scroll" href="#about">About</a></li>
 			   <li class="nav-item"><a class="nav-link smoth-scroll" href="#skillbar">Expertise</a></li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="#service">Servicios</a></li>
-			   <li class="nav-item"><a class="nav-link smoth-scroll" href="#portfolio">portfolio</a></li>
+			   <li class="nav-item"><a class="nav-link smoth-scroll" href="#service">Service</a></li>
+			   <li class="nav-item"><a class="nav-link smoth-scroll" href="#portfolio">Briefcase</a></li>
 			   <!--<li class="nav-item"><a class="nav-link smoth-scroll" href="#blog">Blog</a></li>-->
 			   <li class="nav-item"><a class="nav-link smoth-scroll" href="#contact">Contact</a></li>
 			</ul>
@@ -87,7 +87,7 @@
 					<h1 class="font-weight-normal text-color text-md"><i class="ti-minus mr-2"></i>Programador</h1>
 					<h2 class="mt-3 text-lg mb-3 text-capitalize">Victor Lopez Castillo</h2>
 					<p class="animated fadeInUp lead mt-4 mb-5 text-white-50 lh-35"></p>
-					<a href="#about" class="btn btn-solid-border">About Me</a>
+					<a href="#about" class="btn btn-solid-border">Sobre mi</a>
 				</div>
 			</div>
 		</div>
