--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			<div class="col-lg-6 col-12 col-md-7">
 				<div class="ml-5 position-relative mt-5 mt-lg-0">
 					<span class="head-trans">Victor</span>
-					<h1 class="font-weight-normal text-color text-md"><i class="ti-minus mr-2"></i>Programador</h1>
+					<h1 class="font-weight-normal text-color text-md"><i class="ti-minus mr-2"></i>Desarrollador</h1>
 					<h2 class="mt-3 text-lg mb-3 text-capitalize">Victor Lopez Castillo</h2>
 					<p class="animated fadeInUp lead mt-4 mb-5 text-white-50 lh-35"></p>
 					<a href="#about" class="btn btn-solid-border">Sobre mi</a>
